--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-
     {{>navigation}}
 
     <main class="container p-5">
         {{>messages}}
+        {{>errors}}
         {{{body}}}
     </main>
     
